I work at Women Who Code now❗️

--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -1,13 +1,13 @@
 - content_for :meta do
   %title About - Megan Tiu
-  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer based in Atlanta, Georgia. Read about her here.'}
+  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. Read about her here.'}
 
 = render partial: "header.html.haml"
 .content.about
   %p
-    I'm a full-stack web developer specializing in Rails and am currently working, building cool things, and developing developers at
-    %a{href: 'http://callrail.com'} CallRail.
-    I love writing clean code, optimizing performance, working with big data, and helping other developers grow. I'm also passionate about diversity in tech and building a positive, accessible community for all. I genuinely love the work I do.
+    I'm a full-stack web developer specializing in Rails and am currently working as an Engineering Manager at
+    %a{href: 'https://womenwhocode.com'} Women Who Code.
+    I love helping other developers grow, writing clean code, and optimizing performance. I'm also passionate about diversity in tech and building a positive, accessible community for all. I genuinely love the work I do.
   %p
     I graduated magna cum laude from Georgia State University with a BA in Film and Television and I also completed the Tech Talent South Code Immersion Program. When I'm not glued to my computer, I love tabletop and video gaming, futzing with my many mechanical keyboards, and playing with
     = succeed "." do
