--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -1,12 +1,12 @@
 - content_for :meta do
   %title Contact - Megan Tiu
-  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer based in Atlanta, Georgia. You can contact her here.'}
+  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. You can contact her here.'}
 
 = render partial: "header.html.haml"
 .content.contact
   %p
-    I'm a full-stack web developer in Atlanta, GA currently working for
-    %a{href: 'http://callrail.com'} CallRail.
+    I'm a full-stack web developer and engineering leader in Atlanta, GA currently working for
+    %a{href: 'https://womenwhocode.com'} Women Who Code.
   %p
     You can send me an email
     %a{:href => "mailto:megan@megantiu.com"} here.
