--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
   %title Megan Tiu
-  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia."}
+  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia."}
 
 .container.home
   .photo
@@ -15,8 +15,8 @@
     = link_to image_tag('email.png'), 'mailto:megan@megantiu.com'
   .description
     %p
-      I'm a full-stack web developer in Atlanta, GA currently working for
-      %a{href: 'http://callrail.com'} CallRail.
+      I'm a full-stack web developer and engineering leader in Atlanta, GA currently working for
+      %a{href: 'https://womenwhocode.com'} Women Who Code.
   .links
     = link_to 'about', about_path, class: 'link'
     = link_to 'contact', contact_path, class: 'link'
