--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -1,22 +1,18 @@
 - content_for :meta do
   %title Now - Megan Tiu
-  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia. This is what she's up to now."}
+  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. This is what she's up to now."}
 
 = render partial: "header.html.haml"
 .content.now
   %p#now Here's what I'm up to now:
   %ul
     %li
-      I'm working for
-      %a{href: 'https://callrail.com'} CallRail
-      where I spend most of my days using Ruby to build complex inventory management and call routing systems. I also run a developer apprenticeship program at CallRail, helping grow two developing developers. If you've got thoughts on teaching and guiding new devs, I'd love to chat!
+      I'm now working for
+      %a{href: 'https://womenwhocode.com'} Women Who Code, 
+      where I have the joy of wearing many hats while leading a small, mission-driven engineering team. I couldn't be prouder to be part of such a fantastic organization.
     %li
-      I've got a new talk called "The Practical Guide to Building an Apprenticeship" based on my experience creating and running the apprenticeship at CallRail. If you are (or know) a conference organizer that's interested in having this talk at your conference, please
+      I've been giving a talk called "The Practical Guide to Building an Apprenticeship" at a few different conferences. It's based on my experience creating and running an apprenticeship at my previous company. If you are (or know) a conference organizer that's interested in having this talk at your conference, please
       %a{href: '/contact'} get in touch!
-    %li
-      I'm on the board of directors for
-      %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta,
-      where I serve as Communications Coordinator and get the joy of talking with and writing for inspiring, exciting women that love code.
     %li
       I'm in a wonderful book club for ever-growing developers where we recently finish reading Sandi Metz's Practical Object Oriented Design in Ruby and have begun Martin Fowler's Refactoring.
     %li
