Minor text fixes

--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -5,7 +5,7 @@
 = render partial: "header.html.haml"
 .content.about
   %p
-    I'm a full-stack web developer specializing in Rails and am currently working as the Director of Engineering at
+    I'm a full-stack web developer and engineering leader and am currently working as the Director of Engineering at
     %a{href: 'https://womenwhocode.com'} Women Who Code.
     I love helping other developers grow, writing clean code, and optimizing performance. I'm also passionate about diversity in tech and building a positive, accessible community for all. I genuinely love the work I do.
   %p
