--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -7,7 +7,7 @@
   %p#now Here's what I'm up to now:
   %ul
     %li
-      I'm now working for
+      I'm the Director of Engineering at
       %a{href: 'https://womenwhocode.com'} Women Who Code, 
       where I have the joy of wearing many hats while leading a small, mission-driven engineering team. I couldn't be prouder to be part of such a fantastic organization.
     %li
