--- a/app/views/static/wishlist.html.haml
+++ b/app/views/static/wishlist.html.haml
@@ -21,9 +21,9 @@
         %strong Tombow Bright brush pen set:
       My bullet journal is a key part of my world. The more colors I have, the better I'm able to express my creativity and ensure visual or creative blockers don't get in the way of my productivity.
     %li
-      %a{href: 'https://www.gamestop.com/nintendo-3ds/games/pokemon-omega-ruby/114994'}
-        %strong Pokemon Omega Ruby:
-      My favorite Pokemon game of all time is Alpha Sapphire; Hoenn is my favorite region. Unfortnately, Pokemon games only allow you to have one save file, and I've sunk 250+ hours into my Alpha Sapphire save (and it's what I use to move Pokemon between game generations). I'd really love to re-experience these games under a new save and on the version I don't already own (yay, version exclusives!).
+      %a{href: 'https://smile.amazon.com/Crazy-Asians-Blu-ray-Digital-Combo/dp/B07D5155WL/ref=pd_rhf_pe_s_bmx_1_3'}
+        %strong Crazy Rich Asians Blu-ray
+      What can I say, it's a hugely successful film in the American market with an entirely Asian cast. It's also really well made and just a fun movie overall. And yeah, I still buy physical media.
     %li
       %a{href: 'http://a.co/d/8KRHTIs'}
         %strong Gilmore Girls: a Day in the Life DVDs:
