Update wishlist, removing what I have and adding what I don't

--- a/app/views/static/wishlist.html.haml
+++ b/app/views/static/wishlist.html.haml
@@ -5,34 +5,6 @@
   %p I've been told by various friends and family that I'm "difficult to shop for" and "what even are those weird hobbies, Megan." Christmas and birthday season is here, so I've decided to compile a list of things I'd like to have (if you're seeing this page, you're probably one of those aforementioned befuddled folks). Here are some gift ideas for me! 🎁
   %ul
     %li
-      %a{href: 'https://overtone.co/products/vibrant-purple-complete-system'}
-        %strong Overtone hair color care kit:
-      I like to color my hair purple, and this kit supplements the initial salon dye and keeps my hair bright and pretty for much longer than it would be otherwise!
-    %li
-      %a{href: 'https://www.gallerynucleus.com/detail/20810/'}
-        %strong This beautiful art print:
-      I really love this artist's work, but I've yet to own any of it.
-    %li
-      %a{href: 'https://novelkeys.xyz/collections/switches/products/cherry-switches?variant=12495307702365'}
-        %strong Cherry MX Speed Silver mechanical switches:
-      I like to build mechanical keyboards and I need some switches for my next build! These come in packs of 10 (so a quantity of 1 is actually 10 switches), so I'll need 8 packs of these switches. The Speed Silver variant is pretty important here, so if they go out of stock, we can just skip this item.
-    %li
-      %a{href: 'http://a.co/d/anWueix'}
-        %strong Tombow Bright brush pen set:
-      My bullet journal is a key part of my world. The more colors I have, the better I'm able to express my creativity and ensure visual or creative blockers don't get in the way of my productivity.
-    %li
-      %a{href: 'https://smile.amazon.com/Crazy-Asians-Blu-ray-Digital-Combo/dp/B07D5155WL/ref=pd_rhf_pe_s_bmx_1_3'}
-        %strong Crazy Rich Asians Blu-ray
-      What can I say, it's a hugely successful film in the American market with an entirely Asian cast. It's also really well made and just a fun movie overall. And yeah, I still buy physical media.
-    %li
-      %a{href: 'http://a.co/d/8KRHTIs'}
-        %strong Gilmore Girls: a Day in the Life DVDs:
-      I'm a major Gilmore Girls fan (and still buy physical media). Since this is new, it's the only GG content I don't already own on disc!
-    %li
-      %a{href: 'http://a.co/d/6ytXWGH'}
-        %strong Scaling Teams: Strategies for Building Successful Teams and Organizations:
-      I stole the name of this book for one of my RubyConf tracks, but I've yet to actually read it! It's directly applicable to the types of professional problems I like to solve.
-    %li
-      %a{href: 'http://a.co/d/gAiDnT8'}
-        %strong Half and Half: Writers on Growing Up Biracial and Bicultural:
-      I don't meet a lot of biracial folks, and certainly not in situations where we can discuss the experience. My race is a very important part of my identity, and I'd like to explore it more and hear similar stories.
+      %a{href: 'https://www.jetpens.com/JetPens-Gift-Card-E-mail-Delivery/pd/579'}
+        %strong JetPens gift card
+    I really like pens, and want to start investing in better tools that will last a longer time. A gift card to my favorite pen shop will help me figure out what I do and do not like in pens and invest in sturdier supplies.
