Update talks page

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,11 +8,15 @@
   %h3.list-header Upcoming
   %ul
     %li
-      August 2018, self.Conference,
-      %strong "The Practical Guide to Building an Apprenticeship"
+      I'm taking a break from conference speaking in 2019.
+      %a{href: '/contact'} Get in touch
+      to discuss potential opportunities for 2020.
   %br
   %h3.list-header Past
   %ul
+    %li
+      August 2018, self.Conference,
+      %strong "The Practical Guide to Building an Apprenticeship"
     %li
       June 2018, We Rise,
       %strong "The Practical Guide to Building an Apprenticeship"
