--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -2,7 +2,7 @@
   %title About - Megan Tiu
   %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. Read about her here.'}
 
-= render partial: "header.html.haml"
+= render 'shared/header'
 .content.about
   %p
     I'm a full-stack web developer and engineering leader and am currently working as the Director of Engineering at
