--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -2,7 +2,7 @@
   %title Contact - Megan Tiu
   %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. You can contact her here.'}
 
-= render partial: "header.html.haml"
+= render 'shared/header'
 .content.contact
   %p
     I'm a full-stack web developer and engineering leader in Atlanta, GA currently working for
