--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -2,7 +2,7 @@
   %title Now - Megan Tiu
   %meta{name: 'description', content: "Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. This is what she's up to now."}
 
-= render partial: "header.html.haml"
+= render 'shared/header'
 .content.now
   %p#now Here's what I'm up to now:
   %ul
