--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -2,7 +2,7 @@
   %title Talks - Megan Tiu
   %meta{name: 'description', content: "Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. Here are the talks she's given."}
 
-= render partial: "header.html.haml"
+= render 'shared/header'
 
 .content.talks
   %h3.list-header Upcoming
