--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -2,7 +2,7 @@
   %title Blog - Megan Tiu
   %meta{name: 'description', content: 'Megan Tiu is a full-stack developer in Atlanta, Georgia. This is her blog. Read all about her experiences with Ruby, Rails, Javascript, developer culture, and more.' }
 
-= render partial: "static/header.html.haml"
+= render 'shared/header'
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
