Copy updates (Ruby Central, yay)

--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -6,7 +6,9 @@
 .content.contact
   %p
     I'm a full-stack web developer and engineering leader in Atlanta, GA currently working for
-    %a{href: 'https://womenwhocode.com'} Women Who Code.
+    %a{href: 'https://womenwhocode.com'} Women Who Code 
+    and serving as a Director at
+    %a{href: 'http://rubycentral.org/'} Ruby Central. 
   %p
     You can send me an email
     %a{:href => "mailto:megan@megantiu.com"} here.
