--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -13,6 +13,8 @@
   .description
     %p
       I'm a full-stack web developer and engineering leader in Atlanta, GA currently working for
-      %a{href: 'https://womenwhocode.com'} Women Who Code.
+      %a{href: 'https://womenwhocode.com'} Women Who Code
+      and serving as a Director of 
+      %a{href: 'http://rubycentral.org/'} Ruby Central. 
   .links
     = render 'shared/links'
