Copy updates for the new job search

--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -5,10 +5,9 @@
 = render 'shared/header'
 .content.contact
   %p
-    I'm a full-stack web developer and engineering leader in Atlanta, GA currently working for
-    %a{href: 'https://womenwhocode.com'} Women Who Code 
+    I'm a full-stack web developer, engineering leader, and educator in Atlanta, GA
     and serving as a Director at
-    %a{href: 'http://rubycentral.org/'} Ruby Central. 
+    %a{href: 'http://rubycentral.org/'} Ruby Central.
   %p
     You can send me an email
     %a{:href => "mailto:megan@megantiu.com"} here.
