--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -12,9 +12,8 @@
     = render 'shared/social_icons'
   .description
     %p
-      I'm a full-stack web developer and engineering leader in Atlanta, GA currently working for
-      %a{href: 'https://womenwhocode.com'} Women Who Code
-      and serving as a Director of 
-      %a{href: 'http://rubycentral.org/'} Ruby Central. 
+      I'm a full-stack web developer, engineering leader, and educator in Atlanta, GA
+      serving as a Director of
+      %a{href: 'http://rubycentral.org/'} Ruby Central.
   .links
     = render 'shared/links'
