--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -5,12 +5,8 @@
 = render 'shared/header'
 .content.about
   %p
-    I'm a full-stack web developer and engineering leader and am currently working as the Director of Engineering at
-    %a{href: 'https://womenwhocode.com'} Women Who Code
-    and serving as a Director of
+    I'm a full-stack web developer, engineering leader and educator. I'm currently searching for my next team and am serving as a Director of
     %a{href: 'http://rubycentral.org/'} Ruby Central.
     I love helping other developers grow, writing clean code, and optimizing performance. I'm also passionate about diversity and inclusion in tech and building a positive, accessible community for all. I genuinely love the work I do.
   %p
-    I graduated magna cum laude from Georgia State University with a BA in Film and Television and I also completed the Tech Talent South Code Immersion Program. When I'm not glued to my computer, I love tabletop and video gaming, futzing with my many mechanical keyboards, and playing with
-    = succeed "." do
-      %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} my pit bull
+    I graduated magna cum laude from Georgia State University with a BA in Film and Television and I also completed the Tech Talent South Code Immersion Program. When I'm not glued to my computer, I love tabletop and video gaming, futzing with my many mechanical keyboards, and playing with my two rescue dogs.
