--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -7,19 +7,16 @@
   %p#now Here's what I'm up to now:
   %ul
     %li
-      I serve as a Director of 
-      %a{href: 'http://rubycentral.org/'} Ruby Central, 
-      the non-profit that organizes RailsConf and RubyConf, and funds Rubygems infrastructural costs. I'm excited to work with such a great team to ensure the longevity and health of the Ruby community.
-    %li
-      I'm the Director of Engineering at
-      %a{href: 'https://womenwhocode.com'} Women Who Code, 
-      where I have the joy of wearing many hats while leading a small, mission-driven engineering team. I couldn't be prouder to be part of such a fantastic organization.
-    %li
-      I've been taking a break from conference speaking in 2019 in favor of spending more time with my family and in order to put more time in on my existing professional committments. However, if your conference or company would be interested in talks on hiring engineers or training early-career developers in 2020, please 
+      I'm currently looking for my next team! I'm primarily eyeing IC Ruby Engineering or developer education roles, but will consider anything on the
+      %a{href: 'https://charity.wtf/2017/05/11/the-engineer-manager-pendulum/'} engineer-manager pendulum.
+      If you would like to chat about a potential fit or about how I can improve the developer experience at your company, please
       %a{href: '/contact'} get in touch.
     %li
-      I'm in a wonderful book club for ever-growing developers where we recently finish reading Sandi Metz's Practical Object Oriented Design in Ruby and have begun Martin Fowler's Refactoring.
+      I serve as a Director of
+      %a{href: 'http://rubycentral.org/'} Ruby Central,
+      the non-profit that organizes RailsConf and RubyConf, and funds Rubygems infrastructural costs. I'm excited to work with such a great team to ensure the longevity and health of the Ruby community.
     %li
-      I get to snuggle and play with
-      %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} this amazing beast
-      every day.
+      I've been taking a break from conference speaking in 2019 in favor of spending more time with my family and in order to put more time in on my existing professional committments. However, if your conference or company would be interested in talks on hiring engineers or training early-career developers in 2020, please
+      %a{href: '/contact'} get in touch.
+    %li
+      This year, I rescued a black lab/border collie mix. Getting to know him has been a joy, and I truly love every moment I get to spend with him and my older pit bull.
