Update wishlist for the holiday season

--- a/app/views/static/wishlist.html.haml
+++ b/app/views/static/wishlist.html.haml
@@ -5,6 +5,30 @@
   %p I've been told by various friends and family that I'm "difficult to shop for" and "what even are those weird hobbies, Megan." Christmas and birthday season is here, so I've decided to compile a list of things I'd like to have (if you're seeing this page, you're probably one of those aforementioned befuddled folks). Here are some gift ideas for me! 🎁
   %ul
     %li
-      %a{href: 'https://www.jetpens.com/JetPens-Gift-Card-E-mail-Delivery/pd/579'}
-        %strong JetPens gift card
-    I really like pens, and want to start investing in better tools that will last a longer time. A gift card to my favorite pen shop will help me figure out what I do and do not like in pens and invest in sturdier supplies.
+      %a{href: 'https://www.torrid.com/giftcertpurchase'}
+        %strong Torrid gift card
+    Torrid is the one brick-and-mortar clothing store that I definitively know I can walk into and want to buy a ton of things inside. They've also got an extensive online collection that has many dreamy options. I've been trying to buy clothes that make me feel good lately, so it'd be fun to continue that trend.
+    %li
+      %a{href: 'https://www.davidstea.com/us_en/tea/organic-nepal-black/10288US01VAR0013146.html'}
+        %strong David's Tea Nepal Black
+    This is a tea I've been wanting to try that comes highly recommended, but I haven't been able to justify buying it for myself. Additionally, any tea sampler is a pretty safe bet for me.
+    %li
+      %a{href: 'http://teelievable.com/product/official-get-fucking-set-atlanta-football-rise-up-move-forward-2017-2018-playoff-super-bowl-run-t-shirt/'}
+        %strong "Get Fucking Set" shirt
+    This shirt commemorates one of my favorite moments in Falcons history, a shot heard round the world: when vanilla Matt Ryan asked the line to Get Fucking Set. Size 2XL would be lovely.
+    %li
+      %a{href: 'https://nativemaps.us/products/atlanta?variant=7479873404994'}
+        %strong Atlanta neighborhoods map
+    I've wanted one of these for a while (it'd make a great piece in my office) and this is probably the prettiest implementation I've seen over the years (in navy and white!).
+    %li
+      %a{href: 'https://www.bestbuy.com/site/celeste-nintendo-switch/6352177.p?skuId=6352177'}
+        %strong Celeste
+    This game comes highly recommended. I've been wanting to play it for a while, but rarely can justify buying games for myself. This would be so fun!
+    %li
+      %a{href: 'https://friendshippostcards.weebly.com/'}
+        %strong Friendshipping merch
+    These postcards would be such a delightful, low-bandwidth way to remind my friends that I care about them.
+    %li
+      %a{href: 'https://smile.amazon.com/Pans-Labyrinth-Blu-ray/dp/B002BYYA9A/ref=tmm_blu_title_2'}
+        %strong Pan's Labyrinth blu-ray
+    This classic Guillermo del Toro movie is definitely on my list of all-time favorite films, and I realized I don't own it yet!
