I've been told I need to add more.

--- a/app/views/static/wishlist.html.haml
+++ b/app/views/static/wishlist.html.haml
@@ -32,3 +32,11 @@
       %a{href: 'https://smile.amazon.com/Pans-Labyrinth-Blu-ray/dp/B002BYYA9A/ref=tmm_blu_title_2'}
         %strong Pan's Labyrinth blu-ray
     This classic Guillermo del Toro movie is definitely on my list of all-time favorite films, and I realized I don't own it yet!
+    %li
+      %a{href: 'https://www.jetpens.com/JetPens-Gift-Card-E-mail-Delivery/pd/579'}
+        %strong JetPens gift card
+    I really like pens, and want to start investing in better tools that will last a longer time. A gift card to my favorite pen shop will help me figure out what I do and do not like in pens and invest in sturdier supplies.
+    %li
+      %a{href: 'https://smile.amazon.com/Philips-Hue-Ambiance-Equivalent-Assistant/dp/B01ESW34RQ/ref=sr_1_7'}
+        %strong Hue white bulbs
+    Always needed in my house, but especially now that I'm working 100% remote so I can help control the light in my office.
