Omg, I finally found the right frame

--- a/app/views/static/wishlist.html.haml
+++ b/app/views/static/wishlist.html.haml
@@ -40,3 +40,8 @@
       %a{href: 'https://smile.amazon.com/Philips-Hue-Ambiance-Equivalent-Assistant/dp/B01ESW34RQ/ref=sr_1_7'}
         %strong Hue white bulbs
     Always needed in my house, but especially now that I'm working 100% remote so I can help control the light in my office.
+    %li
+      %a{href: 'https://smile.amazon.com/gp/product/B07C78ZZ7J/ref=ppx_yo_dt_b_asin_title_o01_s00?ie=UTF8&psc=1'}
+        %strong These frames!
+    For years, I've had a set of beautiful (signed) art prints that have just been laying around, waiting to be framed, but they're a weird size. Come to find out, they're actually A3 sized! I found this frame and verified that it's great. I've got one now, so I just need
+    %strong four more!
