--- a/app/views/static/wishlist.html.haml
+++ b/app/views/static/wishlist.html.haml
@@ -17,25 +17,9 @@
         %strong "Get Fucking Set" shirt
     This shirt commemorates one of my favorite moments in Falcons history, a shot heard round the world: when vanilla Matt Ryan asked the line to Get Fucking Set. Size 2XL would be lovely.
     %li
-      %a{href: 'https://nativemaps.us/products/atlanta?variant=7479873404994'}
-        %strong Atlanta neighborhoods map
-    I've wanted one of these for a while (it'd make a great piece in my office) and this is probably the prettiest implementation I've seen over the years (in navy and white!).
-    %li
-      %a{href: 'https://www.bestbuy.com/site/celeste-nintendo-switch/6352177.p?skuId=6352177'}
-        %strong Celeste
-    This game comes highly recommended. I've been wanting to play it for a while, but rarely can justify buying games for myself. This would be so fun!
-    %li
       %a{href: 'https://friendshippostcards.weebly.com/'}
         %strong Friendshipping merch
     These postcards would be such a delightful, low-bandwidth way to remind my friends that I care about them.
-    %li
-      %a{href: 'https://smile.amazon.com/Pans-Labyrinth-Blu-ray/dp/B002BYYA9A/ref=tmm_blu_title_2'}
-        %strong Pan's Labyrinth blu-ray
-    This classic Guillermo del Toro movie is definitely on my list of all-time favorite films, and I realized I don't own it yet!
-    %li
-      %a{href: 'https://www.jetpens.com/JetPens-Gift-Card-E-mail-Delivery/pd/579'}
-        %strong JetPens gift card
-    I really like pens, and want to start investing in better tools that will last a longer time. A gift card to my favorite pen shop will help me figure out what I do and do not like in pens and invest in sturdier supplies.
     %li
       %a{href: 'https://smile.amazon.com/Philips-Hue-Ambiance-Equivalent-Assistant/dp/B01ESW34RQ/ref=sr_1_7'}
         %strong Hue white bulbs
@@ -44,4 +28,4 @@
       %a{href: 'https://smile.amazon.com/gp/product/B07C78ZZ7J/ref=ppx_yo_dt_b_asin_title_o01_s00?ie=UTF8&psc=1'}
         %strong These frames!
     For years, I've had a set of beautiful (signed) art prints that have just been laying around, waiting to be framed, but they're a weird size. Come to find out, they're actually A3 sized! I found this frame and verified that it's great. I've got one now, so I just need
-    %strong four more!
+    %strong two more!
