--- a/app/views/shared/_social_icons.html.haml
+++ b/app/views/shared/_social_icons.html.haml
@@ -1,4 +1,9 @@
-= link_to image_tag('my_tw2.png'), 'http://twitter.com/megantiu'
-= link_to image_tag('32px.png'), 'http://github.com/megantiu'
-= link_to image_tag('my_li2.png'), 'http://linkedin.com/in/megantiu'
-= link_to image_tag('email.png'), 'mailto:megan@megantiu.com'
+#social-container
+  %a{href: 'https://twitter.com/megantiu'}
+    .icon-container#twitter
+  %a{href: 'https://github.com/megantiu'}
+    .icon-container#github
+  %a{href: 'https://linkedin.com/in/megantiu'}
+    .icon-container#linkedin
+  %a{href: 'mailto:megan@megantiu.com'}
+    .icon-container#email
