--- a/app/views/shared/_social_icons.html.haml
+++ b/app/views/shared/_social_icons.html.haml
@@ -1,4 +1,4 @@
-#social-container
+.social-icons
   %a{href: 'https://twitter.com/megantiu'}
     .icon-container#twitter
   %a{href: 'https://github.com/megantiu'}
