--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,9 +8,9 @@
   %h3.list-header Upcoming
   %ul
     %li
-      I'm taking a break from conference speaking in 2019.
+      I've been on a temporary hiatus from speaking.
       %a{href: '/contact'} Get in touch
-      to discuss potential opportunities for 2020.
+      to discuss potential future opportunities.
   %br
   %h3.list-header Past
   %ul
