--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
-  %title Blog - Megan Tiu
-  %meta{name: 'description', content: 'Megan Tiu is a full-stack developer in Atlanta, Georgia. This is her blog. Read all about her experiences with Ruby, Rails, Javascript, developer culture, and more.' }
+  %title Blog - Max Tiu
+  %meta{name: 'description', content: 'Max Tiu is a full-stack developer in Atlanta, Georgia. This is his blog. Read all about his experiences with Ruby, Rails, Javascript, developer culture, and more.' }
 
 = render 'shared/header'
 .window.blog
