--- a/app/views/blog/post_one.html.haml
+++ b/app/views/blog/post_one.html.haml
@@ -1,6 +1,6 @@
 - @title = "The 5 Most Meaningful Lessons I Learned from Coding Bootcamp"
 - content_for :meta do
-  %title #{@title + " - Megan Tiu "}
+  %title #{@title + " - Max Tiu "}
 
 = render 'shared/header'
 .window.blog
