--- a/app/views/blog/post_six.html.haml
+++ b/app/views/blog/post_six.html.haml
@@ -1,6 +1,6 @@
 - @title = "Adventures of a One-Woman Development Team"
 - content_for :meta do
-  %title #{@title + " - Megan Tiu "}
+  %title #{@title + " - Max Tiu "}
 
 = render 'shared/header'
 .window.blog
