--- a/app/views/blog/post_twelve.html.haml
+++ b/app/views/blog/post_twelve.html.haml
@@ -1,6 +1,6 @@
 - @title = 'How to Become a Senior Software Engineer in 2 Years or Less'
 - content_for :meta do
-  %title #{@title + " - Megan Tiu "}
+  %title #{@title + " - Max Tiu "}
 
 = render 'shared/header'
 .window.blog
