--- a/app/views/shared/_social_icons.html.haml
+++ b/app/views/shared/_social_icons.html.haml
@@ -1,9 +1,9 @@
 .social-icons
-  %a{href: 'https://twitter.com/megantiu'}
+  %a{href: 'https://twitter.com/maximumtiu'}
     .icon-container#twitter
-  %a{href: 'https://github.com/megantiu'}
+  %a{href: 'https://github.com/maximumtiu'}
     .icon-container#github
-  %a{href: 'https://linkedin.com/in/megantiu'}
+  %a{href: 'https://linkedin.com/in/maximumtiu'}
     .icon-container#linkedin
-  %a{href: 'mailto:megan@megantiu.com'}
+  %a{href: 'mailto:max@maximumtiu.com'}
     .icon-container#email
