--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
-  %title About - Megan Tiu
-  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. Read about her here.'}
+  %title About - Max Tiu
+  %meta{name: 'description', content: 'Max Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. Read about him here.'}
 
 = render 'shared/header'
 .content.about
