--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
-  %title Contact - Megan Tiu
-  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. You can contact her here.'}
+  %title Contact - Max Tiu
+  %meta{name: 'description', content: 'Max Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. You can contact him here.'}
 
 = render 'shared/header'
 .content.contact
@@ -10,6 +10,6 @@
     %a{href: 'http://rubycentral.org/'} Ruby Central.
   %p
     You can send me an email
-    %a{:href => "mailto:megan@megantiu.com"} here.
+    %a{:href => "mailto:max@maximumtiu.com"} here.
     Or you could tweet at me
-    %a{:href => "http://twitter.com/megantiu"} here.
+    %a{:href => "http://twitter.com/maximumtiu"} here.
