--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -1,13 +1,13 @@
 - content_for :meta do
-  %title Megan Tiu
-  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia."}
+  %title Max Tiu
+  %meta{name: 'description', content: "Max Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia."}
 
 .container.home
   .photo
     %a{:href => '/'}
       = image_tag 'me.jpg', class: 'img-responsive img-circle me-pic',
-        alt: 'Megan Tiu'
-  %h1.name Megan Tiu
+        alt: 'Max Tiu'
+  %h1.name Max Tiu
   = render 'shared/social_icons'
   .description
     %p
