--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
-  %title Now - Megan Tiu
-  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. This is what she's up to now."}
+  %title Now - Max Tiu
+  %meta{name: 'description', content: "Max Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. This is what he's up to now."}
 
 = render 'shared/header'
 .content.now
