--- a/app/views/static/wishlist.html.haml
+++ b/app/views/static/wishlist.html.haml
@@ -2,7 +2,7 @@
 
 .content.talks
   %h3 Wishlist
-  %p I've been told by various friends and family that I'm "difficult to shop for" and "what even are those weird hobbies, Megan." Christmas and birthday season is here, so I've decided to compile a list of things I'd like to have (if you're seeing this page, you're probably one of those aforementioned befuddled folks). Here are some gift ideas for me! 🎁
+  %p I've been told by various friends and family that I'm "difficult to shop for" and "what even are those weird hobbies, Max." Christmas and birthday season is here, so I've decided to compile a list of things I'd like to have (if you're seeing this page, you're probably one of those aforementioned befuddled folks). Here are some gift ideas for me! 🎁
   %ul
     %li
       %a{href: 'https://www.torrid.com/giftcertpurchase'}
