--- a/app/views/blog/post_four.html.haml
+++ b/app/views/blog/post_four.html.haml
@@ -1,6 +1,6 @@
 - @title = "Getting and Setting Cookies in Javascript the Fun and Easy Way"
 - content_for :meta do
-  %title #{@title + " - Megan Tiu "}
+  %title #{@title + " - Max Tiu "}
 
 = render 'shared/header'
 .window.blog
@@ -24,13 +24,13 @@
           How do they work?
         %p.body
           %span.heavier Cookies are domain-specific,
-          so any you've collected from megantiu.com won't follow you back over to Twitter or wherever you may go next. You can even check the cookies on the current site really easily. Open your browser's Javascript console and type:
+          so any you've collected from maximumtiu.com won't follow you back over to Twitter or wherever you may go next. You can even check the cookies on the current site really easily. Open your browser's Javascript console and type:
           %pre
             document.cookie
         %p.body
           That's all the current page's cookies! (Yes, I'm using Google Analytics. ¯\_(ツ)_/¯) It's just as easy to set a cookie, too:
           %pre
-            document.cookie = "meganscookie=12345"
+            document.cookie = "maxscookie=12345"
         %p.body
           A cookie is a 
           %span.heavier key-value pair,
@@ -49,7 +49,7 @@
             , which means the cookie will apply to all pages under the given domain.
           %li
             %code.inline domain
-            is the domain where the cookie will be active. In this case, it's megantiu.com, as it defaults to the host of the current page. If you specify a domain, all its subdomains will be included.
+            is the domain where the cookie will be active. In this case, it's maximumtiu.com, as it defaults to the host of the current page. If you specify a domain, all its subdomains will be included.
           %li
             %code.inline expires
             takes a UTC date-time string for the desired cookie expiration time. A quick way to calculate the expiration string for a week from now would be:
@@ -72,9 +72,9 @@
         %h2#thats-pretty-cool
           Okay, that's all pretty cool.
         %p.body
-          Right? And if I wanted to set my cookie to expire in one week and be applicable across all megantiu.com subdomains (like iam.megantiu.com), it'd look like this:
+          Right? And if I wanted to set my cookie to expire in one week and be applicable across all maximumtiu.com subdomains (like iam.maximumtiu.com), it'd look like this:
           %pre
-            document.cookie = "meganscookie=12345;domain=.megantiu.com;expires=Sun, 05 Jun 2016 16:49:09 GMT"
+            document.cookie = "maxscookie=12345;domain=.maximumtiu.com;expires=Sun, 05 Jun 2016 16:49:09 GMT"
         %p.body
           So now the browser shows us:
         = image_tag 'new_cookie.png', class: 'body'
