--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -1,5 +1,5 @@
 - if request.path.include?('/blog/4')
-  %title Getting and Setting Cookies in Javascript the Fun and Easy Way - Megan Tiu
+  %title Getting and Setting Cookies in Javascript the Fun and Easy Way - Max Tiu
 - else
-  %title Megan Tiu
-%meta{name: 'description', content: 'Megan Tiu is a full-stack web developer based in Atlanta, Georgia.'}
+  %title Max Tiu
+%meta{name: 'description', content: 'Max Tiu is a full-stack web developer based in Atlanta, Georgia.'}
