--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,8 +2,8 @@
   .photo
     %a{:href => '/'}
       = image_tag 'me.jpg', class: 'img-responsive img-circle me-pic',
-        alt: 'Megan Tiu'
-  %h1.name Megan Tiu
+        alt: 'Max Tiu'
+  %h1.name Max Tiu
   = render 'shared/social_icons'
   .links
     = render 'shared/links'
