--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
-  %title Talks - Megan Tiu
-  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. Here are the talks she's given."}
+  %title Talks - Max Tiu
+  %meta{name: 'description', content: "Max Tiu is a full-stack web developer and engineering leader based in Atlanta, Georgia. Here are the talks he's given."}
 
 = render 'shared/header'
 
